minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      name: minio-pod
      labels:
        app: minio
    spec:
      containers:
        - name: minio-container
          image: minio/minio
          args:
            - server
            - /data/minio
            - --console-address
            - :9001
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - name: minio-storage
              mountPath: /data/minio
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
