minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels:
    app: minio
  namespace: minio
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - targetPort: 9000
      port: 9000
    - targetPort: 9001
      port: 9001
